--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,6 +42,8 @@ dependencies {
     compile 'com.android.support:cardview-v7:25.0.0'
     //Picasso
     compile 'com.squareup.picasso:picasso:2.5.2'
+    //Gson
+    compile 'com.google.code.gson:gson:2.8.1'
 }
 
 
