--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,6 +44,8 @@ dependencies {
     compile 'com.squareup.picasso:picasso:2.5.2'
     //Gson
     compile 'com.google.code.gson:gson:2.8.1'
+    //Pull-to-refresh
+    compile 'com.navercorp.pulltorefresh:library:3.2.0@aar'
 }
 
 
