--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion '26.0.2'
     defaultConfig {
         applicationId "edu.illinois.finalproject"
-        minSdkVersion 19
+        minSdkVersion 23
         targetSdkVersion 25
         versionCode 1
         versionName "1.0"
@@ -46,6 +46,11 @@ dependencies {
     compile 'com.google.code.gson:gson:2.8.1'
     //Pull-to-refresh
     compile 'com.navercorp.pulltorefresh:library:3.2.0@aar'
+    //Firebase UI
+    compile 'com.firebaseui:firebase-ui-database:0.4.1'
+    //Image compressor
+    compile 'id.zelory:compressor:2.1.0'
+    implementation 'com.google.android.gms:play-services-maps:11.6.2'
 }
 
 
